# image-processor

./: .firebaserc  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
backend/: package.json  pnpm-lock.yaml
frontend/: .eslintrc.json  package.json  pnpm-lock.yaml
services/image-processor/: pyproject.toml
services/image-processor/src/image_processor/: __init__.py
